Fixed column headers on histogram cutoff table

--- a/grails-app/assets/stylesheets/scatter/Scatter.css
+++ b/grails-app/assets/stylesheets/scatter/Scatter.css
@@ -55,7 +55,7 @@ svg {
 	padding-right: 5px;
 }
 
-#cutoffTable tr td:nth-child(2) { 
+.positionTable tr td:nth-child(2) { 
 	font-size:12px
 
 }
